--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "next": "15.5.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "@headlessui/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
+    "openai": "^4.57.3",
+    "framer-motion": "^11.5.6",
+    "lucide-react": "^0.436.0",
+    "recharts": "^2.12.7",
+    "axios": "^1.7.4",
+    "ws": "^8.18.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5"
   }
 }
